CSS changed to modules and file structure amended. styling now functionining in modules but there is a bug when the window is resized that the rest of the page is cutoff. WriteOutPage started and background image set.

--- a/not_ok/src/App.css
+++ b/not_ok/src/App.css
@@ -1,101 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap');
 
-
-body {
-    background-image: url("./assets/home-page-clouds.png");
-    background-position: center center; /* means when you resize you get the center of the image in focus still*/
-    background-attachment: fixed; /*stops the image scrolling when the user scrolls */
-    background-repeat: no-repeat; /*stops tiling/strange layout */
-    background-size: cover; /* combined with the two above, this makes good setting for styling */
-    background-color: rgb(65, 66, 68)
-}
-
-/*I don't think I'm doing this the best/right way.  I want the nav bar to go from where it starts to the bottom of the page so I sort of hacked it with the height property but this isn't great.  Taken off now as the spacing of the options sort-of made it the right legnth but it's not good and I know it lol  I also have a slight scroll when the screen is full-sized that I don't think should be there and I don't know where it's coming from...*/
-.nav-bar {
-    position: absolute;
-    /* background-color: rgb(65, 66, 68, 0.6); */
-    /* margin-top: 20rem; */
-    height: 75vh;
-    width: 20rem;
-    max-width: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    border-right: 2px dashed white;
-}
-
-.nav-list {
-    list-style: none;
-    margin-top: 2rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-.nav-list-item {
-    text-align: center;
-    padding: 1rem 0;
-}
-
-.nav-link {
-    color: white;
-    font-size: 1.5rem;
-    position: relative;
-    margin-left: 1.25rem;
-    margin-right: .5rem;
-    padding-bottom: .5rem;
-    padding-top: .5rem;
-    text-decoration: none;
-}
-
-.nav-link:hover {
-    color: rgb(153, 121, 250);
-    text-shadow: 0.5px 0.5px 0.5px white;
-}
-
-header {
-    margin: 1.5rem 1.5rem 1.5rem;
-}
-
-h1 {
-    font-size: 4rem;
-    /* font-weight: bolder; */
-}
-
-h2 {
-    font-size: 2.75rem;
-    text-align: center;
-    margin-top: -1rem;
-    margin-bottom: 1rem;
-    margin-right: 2rem;
-    margin-left: 2rem;
-    min-width: 70%;
-}
-
-h3 {
-    font-size: 1.5rem;
-    width: 300px;
-    max-width: 30%;
-    margin-left: 1rem;
-    margin-bottom: 2rem;
-}
-
-/* #main {
-    position: relative;
-} */
-
-.quote-text p {
-    text-align: center;
-    color: black;
-    font-size: 2.5rem;
-    text-shadow: 2px 2px rgb(153, 121, 250);
-    background-color: rgba(220, 186, 231, 0.25);
-    border-color: white;
-    border-style: dashed;
-    padding: 60px;
-    border-radius: 30px;
-    margin-left: 32%;
-    margin-right: 10%;
-    margin-top: 5rem;
-    font-family: 'Caveat', cursive;
-}
